<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="sys_app_name">银河游戏中心</string>
    <string name="sys_title">银河游戏中心</string>
    <string name="sys_setting">设置</string>
    <string name="sys_cancel">取消</string>
    <string name="sys_initing">系统正在初始化，请稍后重试</string>
    <string name="sys_version">V0.0.4</string>
    <string name="sys_user_login_account">账  号:</string>
    <string name="sys_user_login_account_hint">输入账号/手机号</string>
    <string name="sys_user_login_password">密  码:</string>
    <string name="sys_user_login_password_hint">输入密码</string>
    <string name="sys_user_login">登  陆</string>
    <string name="sys_user_register">注  册</string>
    <string name="sys_user_register_phone">手机号注册</string>
    <string name="sys_user_hint_phone">输入手机号注册</string>
    <string name="sys_user_register_account">账号注册</string>
    <string name="sys_user_account_name">账  号:</string>
    <string name="sys_user_account_password">密  码:</string>
    <string name="sys_user_account_phone">手机:</string>
    <string name="sys_user_hint_username">4-16个字符，不能为纯数字</string>
    <string name="sys_user_hint_password">4-16个字符，区分大小写</string>
    <string name="sys_user_hint_password2">再次输入密码</string>
    <string name="sys_user_register_verifycode">请输入验证码和密码完成注册</string>
    <string name="sys_user_register_verify">验证码:</string>
    <string name="sys_user_hint_verify">输入收到的验证码</string>
    <string name="sys_user_account_info">个人信息中心</string>
    <string name="sys_user_phone">手  机:</string>
    <string name="sys_user_nickname">昵  称:</string>
    <string name="sys_user_sex">性  别:</string>
    <string name="sys_user_birthday">生  日:</string>
    <string name="sys_user_location">属  地:</string>
    <string name="sys_user_email">邮  箱:</string>
    <string name="sys_user_userinfo_account_hint">账号/手机号</string>
    <string name="sys_user_userinfo_nickname_hint">风清扬</string>
    <string name="sys_user_userinfo_password_hint">旧密码</string>
    <string name="sys_user_userinfo_newpassword_hint">新密码(4-16个字符)</string>
    <string name="sys_user_userinfo_newpassword2_hint">再次输入新密码</string>
    <string name="sys_user_userinfo_phone_hint">1388888888</string>
    <string name="sys_user_userinfo_sex_hint">男</string>
    <string name="sys_user_userinfo_birthday_hint">1992-10-23</string>
    <string name="sys_user_userinfo_location_hint">北京, 海淀</string>
    <string name="sys_user_userinfo_email_hint">fengqy@sohu.com</string>
    <string name="sys_user_edit">修改信息</string>
    <string name="sys_user_save">保存修改</string>
    <string name="sys_user_change_password">修改密码</string>
    <string name="sys_user_save_password">保存密码</string>
    <string name="sys_user_two_password_diff">两次输入的密码不一致，请再来一次</string>
    <string name="sys_user_login_success">登录成功</string>
    <string name="sys_user_logout_success">退出登陆成功</string>
    <string name="sys_user_login_password_wrong">密码错误, 请重新输入正确的密码</string>
    <string name="sys_user_login_user_not_exist">用户不存在，请重新输入用户和密码</string>
    <string name="sys_user_unknown_error">网络错误或者其他未知错误，请稍后重试</string>
    <string name="sys_user_network_error">网络错误，请检查网络连接</string>
    <string name="sys_user_bind_guest_success">游客绑定成功</string>
    <string name="sys_user_register_user_is_exist">用户名已存在，请重试其他用户名</string>
    <string name="sys_user_register_verify_code_wrong">验证码错误，请确认输入的验证码正确</string>
    <string name="sys_user_save_success">保存成功</string>
    <string name="sys_user_modify_successs">修改成功</string>
    <string name="sys_user_remember_password">记住密码</string>
    <string name="sys_user_show_password">显示密码</string>
    <string name="sys_user_forget_password"><a href="forget_password">忘记密码</a></string>
    <string name="sys_user_agreement">同意并遵守<a href="user_agreement">用户协议</a></string>
    <string name="sys_user_quick_register">注册</string>
    <string name="sys_user_invalid_username">非法的用户名或者昵称，用户名要求以字母开头只包含字母和数字的4-16个字符或者合法的手机号, 如:admin1234或13720021000</string>
    <string name="sys_user_invalid_password">非法的密码，密码要求4-16个字符,如:aDin_1234</string>
    <string name="sys_user_invalid_phone">非法的手机号，手机号要求以13,15,18开头的11位数字</string>
    <string name="sys_user_invalid_date">非法的日期格式，合法日期格式如:1992-10-01</string>
    <string name="sys_user_invalid_chinese">非法的中文字符，请输入合法的汉字</string>
    <string name="sys_user_invalid_email">非法的邮箱，合法的邮箱如:admin@163.com</string>
    <string name="sys_user_invalid_sex">非法的性别，性别只能是汉字"男"或者"女"</string>
    <string name="sys_user_invalid_url">非法的网址，请重新输入</string>
    <string name="sys_user_invalid_number">非法的验证码，验证码只能是纯数字</string>
    <string name="sys_user_invalid_string">非法字符串，请重新输入</string>
    <string name="sys_user_quick_login">登录</string>
    <string name="sys_user_login_dialog">正在登陆...</string>
    <string name="sys_user_phone_as_username">将使用当前手机号作为火山账号</string>
    <string name="sys_user_not_read_sim_state">没有检查到手机卡，请检查插入手机卡！！！</string>
    <string name="sys_user_sending_sms">正在发生短信到%1s进行注册...</string>
    <string name="sys_user_register_now">正在联网注册...</string>
    <string name="sys_user_user_phone_get_code">输入账号和绑定的手机号，获取验证码</string>
    <string name="sys_user_new_password_code">请输入新密码和手机接收的验证码</string>
    <string name="sys_user_get_verify_code">获取验证码</string>
    <string name="sys_user_get_verify_code_now">正在获取验证码...</string>
    <string name="sys_user_forget_account_hint">输入账号/手机号</string>
    <string name="sys_user_forget_phone_hint">输入绑定的手机号</string>
    <string name="sys_user_forget_user_name_empty">账号为空，请输入账号信息</string>
    <string name="sys_user_forget_password_empty">密码为空，请输入合法密码</string>
    <string name="sys_user_forget_phone_empty">输入的绑定手机号为空,请输入手机号</string>
    <string name="sys_user_forget_verify_code_wrong">输入的验证错误，请输入正确的验证码</string>
    <string name="sys_user_reset_password">重置密码</string>
    <string name="sys_user_forget_password_hint">新密码，4-16个字符，区分大小写</string>
    <string name="sys_user_forget_verify_code_hint">输入手机接收的验证码</string>
    <string name="sys_user_forget_verify_code">验证码:</string>
    <string name="sys_user_reset_password_now">正在联网重置密码...</string>
    <string name="sys_user_reset_password_success">重置密码成功</string>
    <string name="sys_user_bind_phone_success">手机绑定成功</string>
    <string name="sys_user_bind_phone_verify_code">输入的验证码错误</string>
    <string name="sys_user_bind_phone_phone_is_exist">输入的手机已被绑定到其他账号，请绑定其他手机号</string>
    <string name="sys_user_verify_check_code">验证验证码</string>
    <string name="sys_user_bind_phone_get_code">输入要绑定的手机号，获取验证码</string>
    <string name="sys_user_bind_phone_code">输入手机接收的验证码，进行验证</string>
    <string name="sys_user_bind_phone_verifing_code">正在联网验证...</string>
    <string name="sys_user_exist_username">已有账号登录</string>
    <string name="sys_user_bind_phone">绑定手机</string>
    <string name="sys_user_bind_other_phone">绑定其他手机</string>
    <string name="sys_user_cancel">用户取消操作</string>
    <string name="sys_user_run_background">程序切换到后台</string>
    <string name="sys_user_is_not_guest">当前账号不是游客账号</string>
    <string name="sys_user_has_not_guest">当前手机没有游客账号</string>
    <string name="hello">当前手机没有游客账号</string>
</resources>