<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="@color/black"
    android:orientation="vertical" >

    <include
        android:id="@+id/sys_title"
        layout="@layout/sys_title" />

    <ScrollView
        android:id="@+id/sys_user_ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_color2" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:text="@string/sys_user_register_verifycode"
                android:textColor="@color/input_text_color"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dip"
                android:paddingLeft="8dip"
                android:paddingRight="8dip" >

                <TextView
                    android:id="@+id/sys_user_register_account"
                    android:layout_width="60dip"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingRight="8dip"
                    android:text="@string/sys_user_register_verify"
                    android:textColor="@color/text"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/sys_user_register_account"
                    android:background="@drawable/sys_input_box_bg"
                    android:orientation="horizontal"
                    android:paddingLeft="6.0dip" >

                    <EditText
                        android:id="@+id/sys_user_register_verifycode"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/sys_user_verifycode_delword"
                        android:background="@color/transparent"
                        android:hint="@string/sys_user_hint_verify"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textColorHint="@color/input_text_color"
                        android:textCursorDrawable="@null"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/sys_user_verifycode_delword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="right"
                        android:layout_marginLeft="4dip"
                        android:layout_marginRight="4dip"
                        android:background="@drawable/sys_del_word" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/sys_user_ic_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dip"
                android:paddingLeft="8dip"
                android:paddingRight="8dip" >

                <TextView
                    android:id="@+id/sys_user_register_password"
                    android:layout_width="60dip"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingRight="8dip"
                    android:text="@string/sys_user_account_password"
                    android:textColor="@color/text"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/sys_user_register_password"
                    android:background="@drawable/sys_input_box_bg"
                    android:orientation="horizontal"
                    android:paddingLeft="6.0dip" >

                    <EditText
                        android:id="@+id/sys_user_account_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/sys_user_password_delword"
                        android:background="@color/transparent"
                        android:hint="@string/sys_user_hint_password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/input_text_color"
                        android:textCursorDrawable="@null"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/sys_user_password_delword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="right"
                        android:layout_marginLeft="4dip"
                        android:layout_marginRight="4dip"
                        android:background="@drawable/sys_del_word" />
                </RelativeLayout>

                <TextView
                    android:id="@id/sys_user_ic_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dip"
                android:paddingLeft="8dip"
                android:paddingRight="8dip" >

                <TextView
                    android:id="@+id/sys_user_register_password2"
                    android:layout_width="60dip"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingRight="8dip"
                    android:text="@string/sys_user_account_password"
                    android:textColor="@color/text"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/sys_user_register_password2"
                    android:background="@drawable/sys_input_box_bg"
                    android:orientation="horizontal"
                    android:paddingLeft="6.0dip" >

                    <EditText
                        android:id="@+id/sys_user_account_password2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/sys_user_password2_delword"
                        android:background="@color/transparent"
                        android:hint="@string/sys_user_hint_password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/input_text_color"
                        android:textCursorDrawable="@null"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/sys_user_password2_delword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="right"
                        android:layout_marginLeft="4dip"
                        android:layout_marginRight="4dip"
                        android:background="@drawable/sys_del_word" />
                </RelativeLayout>

                <TextView
                    android:id="@id/sys_user_ic_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center" />
            </RelativeLayout>

            <Button
                android:id="@+id/sys_user_register_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:layout_marginTop="30dip"
                android:background="@drawable/sys_button_bg"
                android:text="@string/sys_user_register"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>